Updated metadata and site info

--- a/src/index.html
+++ b/src/index.html
@@ -3,35 +3,22 @@
 
 <head>
   <meta charset="utf-8">
-  <title>SocialSpa</title>
+  <title>Vinteres - Find love or friends. Match with people by personality and interests.</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <meta property="itemprop" content="https://pd1eu.badoocdn.com/big/assets/static_images/badoo-share.png?v2">
-  <meta property="og:title" content="Meet New People on Badoo, Make Friends, Chat, Flirt">
+  <meta property="og:image" content="https://vinteres.io/assets/logo.png">
+  <meta property="og:title" content="Vinteres - Find love or friends. Match with people by personality and interests.">
   <meta property="og:type" content="website">
   <meta property="og:description"
-    content="Badoo - chat, date and meet with over 499 million people. Join our community and make new friends in your area.">
-  <meta property="og:site_name" content="Badoo">
-  <meta property="og:image" content="https://pd1eu.badoocdn.com/big/assets/static_images/badoo-share.png?v2">
-  <meta property="fb:app_id" content="107433747809">
-  <meta property="twitter:card" content="app">
-  <meta property="twitter:site" content="@Badoo">
-  <meta property="twitter:app:id:iphone" content="351331194">
-  <meta property="twitter:app:name:iphone" content="Badoo - Meet New People, Chat, Socialize">
-  <meta property="twitter:app:id:ipad" content="351331194">
-  <meta property="twitter:app:name:ipad" content="Badoo - Meet New People, Chat, Socialize">
-  <meta property="twitter:app:id:googleplay" content="com.badoo.mobile">
-  <meta property="twitter:app:name:googleplay" content="Badoo - Meet New People, Chat, Socialize">
+    content="Automatically show people with hight compatability percentage to you. Unlimited messages, send message, voice or video intro. Completely free.">
+  <meta property="og:site_name" content="Vinteres">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Meet New People on Badoo, Make Friends, Chat, Flirt</title>
   <meta name="referrer" content="origin-when-cross-origin">
-  <meta name="y_key" value="11448bbc2e926f5d">
   <meta name="viewport" content="width=1024">
   <meta name="description"
-    content="Badoo - chat, date and meet with over 499 million people. Join our community and make new friends in your area.">
-  <meta property="og:url" content="https://badoo.com/">
+    content="Automatically show people with hight compatability percentage to you. Unlimited messages, send message, voice or video intro. Completely free.">
+  <meta property="og:url" content="https://vinteres.io/">
 
   <style>
     .loader-cont {
