Add alt attribute on loading image

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
 <body>
   <app-root>
     <div class="loader-cont">
-      <img src="/assets/app_loader.svg" />
+      <img src="/assets/app_loader.svg" alt="Loading image" />
     </div>
   </app-root>
 </body>
