--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta property="og:image" content="https://vinteres.io/assets/logo.png">
-  <meta property="og:title" content="Vinteres - Match with people by personality and interests.">
+  <meta property="og:title" content="Match with people by personality and interests.">
   <meta property="og:type" content="website">
   <meta property="og:description"
     content="Automatically show people with hight compatability percentage to you. Unlimited messages, send message, voice or video intro. Completely free.">
