--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,12 @@
   <meta property="og:title" content="Match with people by personality and interests.">
   <meta property="og:type" content="website">
   <meta property="og:description"
-    content="Automatically show people with hight compatability percentage to you. Unlimited messages, send message, voice or video intro. Completely free.">
+    content="Automatically show people with hight compatibility percentage to you. Unlimited messages, send message, voice or video intro. Completely free.">
   <meta property="og:site_name" content="Vinteres">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="referrer" content="origin-when-cross-origin">
   <meta name="description"
-    content="Automatically show people with hight compatability percentage to you. Unlimited messages, send message, voice or video intro. Completely free.">
+    content="Automatically show people with hight compatibility percentage to you. Unlimited messages, send message, voice or video intro. Completely free.">
   <meta property="og:url" content="https://vinteres.io/">
 
   <style>
