--- a/src/index.html
+++ b/src/index.html
@@ -3,20 +3,20 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Vinteres - Match with people by personality and interests.</title>
+  <title>Запознанства по характер и интереси.</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta property="og:image" content="https://vinteres.io/assets/logo.png">
-  <meta property="og:title" content="Match with people by personality and interests.">
+  <meta property="og:title" content="Запознанства по характер и интереси.">
   <meta property="og:type" content="website">
   <meta property="og:description"
-    content="Automatically show people with hight compatibility percentage to you. Unlimited messages, send message, voice or video intro. Completely free.">
+    content="Във Vinteres вие не сте просто една снимка, а имате история. Бъдете забелязани по това кой сте, а не как изглеждате. Намери хора по характер и интереси.">
   <meta property="og:site_name" content="Vinteres">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="referrer" content="origin-when-cross-origin">
   <meta name="description"
-    content="Automatically show people with hight compatibility percentage to you. Unlimited messages, send message, voice or video intro. Completely free.">
+    content="Във Vinteres вие не сте просто една снимка, а имате история. Бъдете забелязани по това кой сте, а не как изглеждате. Намери хора по характер и интереси.">
   <meta property="og:url" content="https://vinteres.io/">
 
   <style>
