Added login/signup with google

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,11 @@
     content="Във Vinteres вие не сте просто една снимка, а имате история. Бъдете забелязани по това кой сте, а не как изглеждате. Намери хора по характер и интереси.">
   <meta property="og:url" content="https://vinteres.io/">
 
+  <meta name="google-signin-client_id"
+    content="766499224314-sccorlbnqno2dpp8e6vg6c28k6gii4a4.apps.googleusercontent.com">
+
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
+
   <style>
     .loader-cont {
       position: fixed;
