Signup with google updates and fixes

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
   <meta name="google-signin-client_id"
     content="766499224314-sccorlbnqno2dpp8e6vg6c28k6gii4a4.apps.googleusercontent.com">
 
-  <script src="https://apis.google.com/js/platform.js" async defer></script>
+  <script src="https://apis.google.com/js/platform.js"></script>
 
   <style>
     .loader-cont {
