--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta property="og:image" content="https://vinteres.io/assets/logo.png">
+  <meta name="keywords" content="зпознанства по характер и интереси, сериозни запознанства, сайт за запознанства, сайт за сериозни запознанства, запознанства с жени, запознанства с мъже, запознанства в българия, zapoznanstva po harakter i interesi, sait za seriozni zapoznanstva, seriozni zapoznanstva"></meta>
   <meta property="og:title" content="Запознанства по характер и интереси.">
   <meta property="og:type" content="website">
   <meta property="og:description"
