--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>Запознанства по характер и интереси.</title>
   <base href="/">
+  <meta name="robots" content="noindex">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta property="og:image" content="https://vinteres.io/assets/logo.png">
