Add support for cordova android

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,8 @@
     content="766499224314-sccorlbnqno2dpp8e6vg6c28k6gii4a4.apps.googleusercontent.com">
 
   <script src="https://apis.google.com/js/platform.js"></script>
+  <!-- CORDOVA BUILD -->
+  <!-- <script type="text/javascript" src="cordova.js"></script> -->
 
   <style>
     .loader-cont {
@@ -43,7 +45,9 @@
 <body>
   <app-root>
     <div class="loader-cont">
-      <img src="/assets/app_loader.svg" alt="Loading image" />
+      <img src="/assets/app_loader.svg" alt="" />
+      <!-- CORDOVA BUILD -->
+      <!-- <img src="./assets/app_loader.svg" alt="" /> -->
     </div>
   </app-root>
 </body>
